fixing alignments of modals across browsers + setting h2 to center in dialog

--- a/web/src/components/people/ExternalInvite.module.css
+++ b/web/src/components/people/ExternalInvite.module.css
@@ -1,5 +1,5 @@
 .dialog {
-  width: clamp(40vw, 60vw, 80vw);
+  margin-top: 15vw;
 }
 
 .dialog-content {
