--- a/web/src/components/studies/CreateStudyForm.module.css
+++ b/web/src/components/studies/CreateStudyForm.module.css
@@ -1,9 +1,5 @@
 .study-dialog {
   padding-bottom: 5rem;
-
-  h2 {
-    text-align: center;
-  }
 }
 
 .error-alert {
